# Wally

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-run.bat  docker-run.sh  gpu_utils.py  pyproject.toml  setup_wsl.sh
.opencode/: anchored-summary.md
ag-tests/: test-gathering-wood.md  test-movement-agent.md
configs/: agent_smoke.yaml  converter_default.yaml  deploy_short.yaml  hierarchy_l1.yaml  hierarchy_l1_5k.yaml  hierarchy_l1_smoke.yaml  hierarchy_l1_v2.yaml  hierarchy_l2.yaml  hierarchy_l2_v1.yaml  hierarchy_l3.yaml  lewm_default.yaml  lewm_smoketest.yaml  lewm_verify.yaml  lewm_wood_1000.yaml  lewm_wood_10000.yaml  lewm_wood_12000.yaml  lewm_wood_500.yaml  lewm_wood_5000.yaml  lewm_wood_profile.yaml  planner_diverse.yaml
configs/planner/: default.yaml
docs/: gpu-setup.md  hierarchical-world-model.md  live-viewer.md  openspec-workflow.md  smoke-tests.md
docs/papers/: cosine-trm-head.tex  make_fig_scsa.py  make_pdf.py
openspec/specs/: hierarchical-planning.md  minecraft-dataset-collector.md  minecraft-environment-integration.md  minecraft-evaluation.md  minecraft-latent-planner.md  minecraft-lewm-training.md  minecraft-server-deployment.md
small-test/: main.py  pyproject.toml
src/agent/: AGENTS.md  __init__.py  buffer.py  config.py  env.py  loop.py  planner_factory.py  play.py  relay.py  viewer.py
src/collector/: AGENTS.md  collector.py  config.py  env.py  (+2 more)
tests/: test_action_adapter.py  test_agent_buffer.py  test_agent_env.py  test_agent_loop.py  test_auth.py  test_buffer.py  test_camera_bug_replication.py  test_cem.py  test_cli.py  test_concat_dataset.py  test_config.py  test_connector.py  test_converter.py  test_curiosity.py  test_curriculum.py  test_data.py  test_deployer_cli.py  test_deployer_cli_planner.py  test_deployer_executor.py  test_deployer_integration.py  test_deployer_logging.py  test_deployer_mock_env.py  test_deployer_planner_factory.py  test_deployer_throttler.py  test_docs_freshness.py  test_e2e_curriculum.py  test_e2e_ensemble.py  test_e2e_hierarchical.py  test_ensemble.py  test_env.py  test_evaluate.py  test_executor.py  test_extract_anomalies.py  test_frame_renderer.py  test_goal_conditioned_planner.py  test_gradient_mpc.py  test_hierarchical_planner.py  test_hierarchy_integration.py  test_hierarchy_runtime.py  test_hierarchy_smoke.py  (+32 more)
tools/: _anomaly_scorers.py  _smoke_make_ckpt.py  analyze_trajectory.py  audit_diamond.py  build_shards.py  check_env.py  check_shards.py  compare_camera_fix.py  debug_extract.py  eval_goals.py  extract_anomalies.py  extract_frames.py  extract_ironpickaxe.py  find_missing.py  inspect_iron_actions.py  inspect_minerl_data.py  inspect_navigate.py  inspect_npz.py  latent_cluster_analysis.py  loss_dashboard.py  minerl_to_raw_shards.py  repack_as_chunks.py  start-play-bind.py  test_live_viewer.py  train_trm_head.py  transcode_shards.py  verify_all_shards.py  verify_shard.py
(+263 files in other folders)
