[project]
name = "wally"
version = "0.1.0"
description = "Minecraft AI research: world models, planning, and goal-conditioned agents"
requires-python = ">=3.12"
dependencies = [
    "minestudio",
    "webdataset>=0.2.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["src"]
