[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wally"
version = "0.1.0"
description = "Minecraft AI research: world models, planning, and goal-conditioned agents"
requires-python = ">=3.12"
dependencies = [
    "minestudio",
    "webdataset>=0.2.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "timm>=0.9.0",
    "wandb>=0.15.0",
    "einops>=0.6.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "pyCraft",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
wally-train = "wally.cli.train:main"
wally-convert = "wally.cli.convert:main"
wally-collect = "wally.cli.collect:main"
wally-plan = "wally.planner.cli:main"
wally-plan-hierarchical = "wally.planner.hierarchical_cli:main"
wally-plan-smoke = "wally.planner.plan_smoke_cli:main"
wally-train-curriculum = "wally.cli.train_curriculum:main"
wally-play = "wally.agent.play:main"
wally-deploy = "wally.deployer.cli:main"
wally-validate = "wally.validator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["smoke: fast smoke tests for CI"]

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["src"]
